增加信号系统模块

--- a/math.org
+++ b/math.org
@@ -106,11 +106,29 @@
 - 泰勒级数：若函数f(x)在含义\(x_{0}\)的某个开区间(a, b)内具有直到(n+1)阶的
   导数，则当x在(a, b)内时，有下面的n阶泰勒公式成立
   $$f(x)=f(x_{0})+f'(x_{0})(x-x_{0})+\frac{f^{(n)}(x_{0})}{n!}(x-x_{n})^{n}+\frac{f^{(n+1)}(x_{0}+\theta(x-x_{0}))}{(n+1)!}(x-x_{0})^{n+1},(0<\theta<1)$$ 
+* 高数
+- 欧拉转换：
+  $$e^{jx}=cos(x)+jsin(x)$$ 和 $$cos(x)=\frac{e^{jx}+e^{-jx}}{2}$$ 
 * 矩阵
 ** 概念
+矩阵实际上是高等线性函数的系数，线性函数就是线性变换的表达式。矩阵就核心的
+代表了线性变换。因为 \(y=Kx\) 就是一个向量x通过矩阵K变换为一个向量y，向量x、
+y各自可以看做一段有向线段，那就是说线性变换就是把一个线段变成另一个线段。因
+此一个矩阵对应一个线性变换，反之亦然。
 - 范数：设V是实数域R(或复数域C)上的n维线性空间，对于V中的任意一个向量或矩阵 \alpha 按照某一确定法则对应着一个实数，这个
   实数称为 \alpha 的 _范数_ , 记为||\alpha||，几范数就是元素几次方的和，除以维数；通俗的理解范数其实是将一个事物映射到非
   负实数域，具有“长度”，“大小”概念；
+- 向量点积：设两个向量的坐标表示为\(a=(a_{x}, a_{y}, a_{z}), b=(b_{x},
+  b_{y}, b_{z})\), 则向量a和b的内积表示为 
+  $$a.b=(|a||b|\cos{\theta})=(a_{x}b_{x}+a_{y}b_{y}+a_{z}b_{z})$$; 
+- 向量叉积：设两个向量的坐标表示为\(a=(a_{x}, a_{y}, a_{z}), b=(b_{x},
+  b_{y}, b_{z})\), 则向量a和b的叉积表示为, 其中\(n_{0}\)表示ab平面的法向量
+  单位向量
+  $$axb=(|a||b|\sin{\theta}n_{0})=(a_{y}b_{z}-a_{z}b_{y}, a_{z}b_{x}-a_{x}b_{z}, a_{x}b_{y}-a_{y}b_{x})$$ 
+** 向量
+- 向量的导数：其中A是矩阵，x是一个n维向量。
+  $$\frac{\partial{AX}}{\partial{X}} = A^{T}$$ 和
+  $$\frac{\partial{X^{T}A}}{\partial{X}}=A$$ 
 * 概率
 ** 概念
 - 样本空间：随机试验的所有可能结果组成的集合，在表示时一般一行的数据表示一个样本，一列的数据表示一个属性(或维度)的数据，
