增加卷积以及算法

--- a/tool.org
+++ b/tool.org
@@ -240,6 +240,8 @@ org-mode在线[[http://orgmode.org/org.html][帮助文档]]。
 5. 公式：在本行，\(\sqrt{2}\)
 6. 和公式：$$a=\sum_{i=0}^{n}a_{i}$$
 7. 分数公式：$$\frac{x}{y}$$
+8. 输入equ，然后按tab也可以进入begin end模式，编辑公式，可以有标号，可以设
+   置label标签引用。
 *** 表格
 **** 内建表格 
 - 固定列宽：可以在某列中写入<n>，n表示n个英文字符宽度，超出宽度的字符将隐
