--- a/software.org
+++ b/software.org
@@ -149,7 +149,11 @@ constant; 最后看看#x,估计你也明白了，他是给x加双引号
 *** numpy
 - array矩阵的max和min静态属性：比如array矩阵data=array([[1, 5, 3], [8, 6, 1], [9, 0, 4], [4, 6, 5]]), data.min(0) 和
   data.max(0)是从每列中获取的min和max，组成一个向量，data.min(1) 和data.max(1)是从每行中获得min和max；
-
+- 指数e：numpy.exp()可以表示，但是是函数，math.exp()也是，scipy.exp()也是，
+  numpy.e和math.e和scipy.e则是一个float型量了。
+- 复数：可以表示成1+3j，3和j之间不能相隔，3必须为实数不能是符号，j必须在3之
+  后，也可以使用numpy.complex(1, 3)构成1+3j, 同理也就可以构成
+  numpy.complex(1, numpy.pi)即\(e^{1+pi j}\)，复数的角度用numpy.angle()计算
 *** matplotlib
 此包注意用于画图
 
