--- a/math.org
+++ b/math.org
@@ -48,6 +48,34 @@
                             |
                             +--other(tensor,group,loop,field)
   #+end_src
+** 复数
+复数的本质就是旋转，4*i*i = -4, 就是4在数轴上旋转180度，那么4*i就是旋转90度。
+在二维XY平面上，X轴就是实数轴，Y轴就是虚数轴。也就是使用复数i参与运算，就意
+味着旋转。使用如下python代码就可以画出此3d图形。从图中可以看出虚轴和实轴随
+着t的增加而旋转向上，非常相似电磁波的传播，电场和磁场基本信号单位也是cos和
+sin信号，随着时间t变化，并且始终正交。由sin和cos信号变化构成了电磁场不断随
+着时间t向前旋转传播。所以复指数信号或欧拉公式可以完美的表示电磁场以及信号。
+复指数信号\(e^{jwt}\)的w表示频率，一般w都为正值，也就代表随着时间t的变化往
+前传播，而还会碰到-w的情况\(e^{jwt}\)，叫做负频率，代表了逆着时间的方向传播，
+所以在现实生活中难以想象负频率的情况，因为时间不可倒流。
+#+begin_src python
+import numpy as np
+import pylab as pl
+from mpl_toolkits.mplot3d import Axes3D
+import signalfun as sf    
+
+fig = pl.figure()
+t = np.arange(0, 8*np.pi, 0.01)
+x = np.cos(t)
+y = np.sin(t)
+ax = fig.add_subplot(111, projection='3d')
+ax.plot(x, y, t)
+ax.set_xlabel('x')
+ax.set_ylabel('y')
+ax.set_zlabel('t')
+pl.show()
+#+end_src
+
 ** 多项式
 *** 概念
 - 最大公因式：设f(x), g(x)是P[x]中两个多项式。P[x]中多项式d(x)称为f(x), g(x)的一个最大公因式，如果它满足
