--- a/math.org
+++ b/math.org
@@ -4,6 +4,7 @@
 #+latex: \newpage 
 
 * 代数
+测试git-emacs
 ** 概念
 - 自然数：natural number，{0，1，2，3...}等全体非负整数组成的数的集合称为自然数；
 - 正整数：positive integer，{1，2，3...}等向前扩充的数称为正整数；
