git emacs test 4

--- a/index.org
+++ b/index.org
@@ -4,7 +4,7 @@
 #+latex: \newpage
 
 * [[./math.org][数学]]
-汇总工作中需要用到数学知识。
+汇总工作中需要用到数学知识。git emacs测试
 * [[./algorithm.org][算法]]
 总结各种机器学习,数据挖掘等的理念、工具、算法等, 以及数字图像处理知识。
 * [[./protocol.org][协议]]
