增加4大变换的关系

--- a/signal.org
+++ b/signal.org
@@ -50,6 +50,19 @@
   \label{equ-frqzone}
   X(e^{jw}) \Rightarrow H(e^{jw}) \Rightarrow Y(e^{jw})=H(e^{jw})X(e^{jw})
   \end{equation}
+- 傅里叶级数，傅里叶变换，拉普拉斯变换，Z变换： _傅里叶级数_ 只能对周期信号
+  进行分析，找出主要频率分量，也就是相应频率信号幅度最大(能量越大)的信号；
+  傅里叶级数具有周期性的局限性，所以又有了 _傅里叶变换_ ，此时信号不必是周
+  期性的，但是也有条件，那就是必须要是能量有限，也就是绝对可积。所以傅里叶
+  变换用于处理非周期信号；然而也有局限性，不适用于指数级增长的信号，所以又
+  推出了 _拉普拉斯变换_ ，拉氏变换相当于是带有一个指数收敛因子的傅里叶变换，
+  把频域推广到复频域，能够分析的信号就更广了，傅立叶变换是拉普拉斯变换的一
+  种特例，在拉普拉斯变换中，只要令Re[s]=1,就得到傅立叶变换 ，然而缺点是从拉
+  氏变换中只能看到复变量s，没有频率f的概念，要看幅频响应和相频响应，需要令 
+  \(s=j2\pi{}f\). _Z变换_ 简单地说，就是离散信号(也可以叫做序列)的拉普拉斯
+  变换，也可以说是离散时间信号的傅里叶变换，如果说拉氏变换专门分析模拟信号，
+  那Z变换就是专门分析数字信号，Z变换可以把离散卷积变成多项式乘法，Z变换看系
+  统频率响应。
 ** 卷积
 如果一个系统的冲击响应为h(n), 表示方式如\ref{equ-hn}，可以理解为由于一个k时
 刻的单位脉冲\(\sigma{}(n-k)\)引起的系统响应为h(n-k), 而输入信号x(n)是由k从
@@ -165,9 +178,6 @@ a_{0} = \frac{\int_{-l}^{l}f(x)dx}{2l}
 a_{n} = \frac{\int_{-l}^{l}f(x)cos(\frac{n\pi x}{l})dx}{l}
 b_{n} = \frac{\int_{-l}^{l}f(x)sin(\frac{n\pi x}{l})dx}{l}
 \end{equation}
-
-
-
 ** 离散时间傅里叶变换(DTFT)
 如果x(n)是绝对可加的，即\(\sum_{-\infty}^{\infty}|x(n)| < \infty\)，则其离
 散时间傅里叶变换表示如\ref{equ-xjw}
