增加平滑滤波算法

--- a/signal.org
+++ b/signal.org
@@ -226,9 +226,91 @@ w_{k} \Rightarrow \frac{\pi}{M}k, (k = 0, 1, ...,M)
  X^{T} = x^{T}[e^{-j\frac{\pi}{M}n^{T}k}]
 \end{equation}
 ** 滤波器
-*** FIR滤波器
+*** FIR滤波
 如果一个LTI系统的单位脉冲响应长度有限，则此系统称为有限长度脉冲响应(FIR)滤
 波器。因此对一个FIR滤波器，在\(n<n_{1}\)和\(n>n_{2}\)时h(n)=0.
-*** IIR滤波器
+*** IIR滤波
 如果一个LTI系统的脉冲响应具有无线长度，则此系统称为无限长脉冲响应(IIR)滤波
 器。
+*** 平滑滤波
+**** 全期平滑
+简单的全期平滑法是对时间数列的过去数据一个不漏的全部加以同等利用；
+**** 移动平滑
+移动平滑法不考虑较远期的数据，并在加权移动平均法中给予近期资料更大的权重；
+通常做法是，使用一个队列或数组作为移动窗口，有新数据时就插入队列头，当队列
+数据满了，则再增加一个数据就从队尾去除一个数据；每有新数据时就用队列数据的
+平均值作为输出替代。
+- 优点：能够比较好的抑制随机噪声，如果窗口选择大，则最终输出数据平滑效果好；
+- 缺点：对新数据的权重比较低，导致对新输入不够敏感，比较迟滞。
+**** 指数平滑
+指数平滑法则兼容了全期平均和移动平均所长，不舍弃过去的数据，但是仅给与逐渐
+减弱的影响权重，即随着数据的远离，赋予逐渐收敛于零的权重。
+- 指数平滑的公式：
+  \begin{equation}
+  \label{equ-pinghua}
+  s_{t} = \alpha{}.y_{t} + (1-\alpha{}).s_{t-1}
+  \end{equation}
+  1. s_{t}: 当前时刻t的平滑输出值；
+  2. y_{t}: 当前时刻t的实际输入值；
+  3. s_{t-1}: 上一时刻t-1的平滑值；
+  4. \alpha: 平滑比例常数，取值范围[0, 1]
+  由式子\ref{equ-pinghua}可知：
+  1. s_{t}是y_{t}和s_{t-1}的加权算术平均数，随着\alpha取值的大小变化，决定
+     y_{t}和s_{t-1}对s_{t}的影响程度，当\alpha取1时，\(s_{t}=y_{t}\); 当取0
+     时，\(s_{t}=s_{t-1}\).
+  2. s_{t}具有逐期追溯性质，可探源至s_{t-(t-t)}为止。包括全部数据，其过程中，
+     平滑常数以指数形式递减，所以称为指数平滑法。如果能够找到y_{1}以前的历
+     史数据，那么初始值s_{1}的确定是可行的，数据较少时可以用全期平均，移动
+     平均法；数据较多时，可以用最小二乘法。但不能使用指数平滑法本身确定初始
+     值，因为数据会匮竭。如果仅有从y1开始的数据，那么确定初始值的方法有：
+     1) 取s_{1}等于y_{1}；
+     2) 待积累若干数据后，取s_{1}等于前面若干数据的简单算术平均数，如：
+        \(s_{1}=（y_{1}+ y_{2}+y_{3}）/3\)等等。 
+- 一次指数平滑：设时间序列为\(y_{1}, y_{2}, ..., y_{t}...\)，则一次指数平滑
+  公式如式\ref{equ-pinghua}.通过展开可以有
+  \begin{equation}
+  \label{equ-pinghuazk}
+  s_{t} = \alpha.\sum_{j=0}^{t-1}(1-\alpha)^{j}y_{t-j}+(1-\alpha)^{t}s_{0}
+  \end{equation}
+  由于\(0<\alpha<1\), 当\(t\Rightarrow \infty\)时，
+  \((1-\alpha)^{t}\Rightarrow 0\)，式子\ref{equ-pinghuazk}变为
+  \begin{equation}
+  s_{t} = \alpha\sum_{j=0}^{\infty}(1-\alpha)^{j}y_{t-j}
+  \end{equation}
+  由此可见，s_{t}实际上是\(y_{t}, y_{t-1}...\)的加权平均，加权系数分别为
+  \(\alpha, \alpha(1-\alpha), \alpha(1-\alpha)^{2}...\)是按照几何级数递减。
+  越近的数据，权重越大，越远的数据，权重越小，且权重之和等于1
+  \begin{equation}
+  \alpha\sum_{j=0}^{\infty}(1-\alpha)^{j} = 1
+  \end{equation}
+  因为加权系数符合指数规律，且又具有平滑数据的功能，所以称为指数平滑。
+- 二次指数平滑：
+  当时间序列没有明显的趋势变动时，使用第t周期一次指数平滑就能直接预测第t+1
+  期之值。但当时间序列的变动出现直线趋势时，用一次指数平滑法来预测仍存在着
+  明显的滞后偏差。因此，也需要进行修正。 修正的方法也是在一次指数平滑
+  的基础上再作二次指数平滑，利用滞后偏差的规律找出曲线的发展方向和发展趋势，
+  然后建立直线趋势预测模型。故称为二次指数平滑法。
+  设一次指数平滑为\(s_{t}\)，则二次指数平滑\(s_{t}^{(2)}\)的计算公式为
+  \begin{equation}
+  s_{t}^{(2)} = \alpha{}s_{t}^{(1)}+(1-\alpha)s_{t-1}^{(2)} 
+  \end{equation}
+  若y_{t}从某时刻开始具有直线趋势，且认为未来时期亦按此直线趋势变化，则可以
+  用二次指数平滑。
+- 三次指数平滑：
+  若时间序列的变动呈现出二次曲线趋势，则需要用三次指数平滑法。三次指数平滑
+  是在二次指数平滑的基础上再进行一次平滑，其计算公式为
+  \begin{equation}
+  s_{t}^{(3)}=\alpha{}s_{t}^{(2)}+(1-\alpha)s_{t-1}^{(3)}
+  \end{equation}
+- 指数平滑系数：指数平滑法的计算中，关键是 的取值大小，但 的取值又容易受主
+  观影响，因此合理确定 的取值方法十分重要，一般来说，如果数据波动较大， 值
+  应取大一些，可以增加近期数据对预测结果的影响。如果数据波动平稳， 值应取小
+  一些。经验判断法：
+  1. 当时间序列呈现较稳定的水平趋势时，应选较小的 值，一般可在0.05～0.20之间取值；
+  2. 当时间序列有波动，但长期趋势变化不大时，可选稍大的 值，常在0.1～0.4之间取值；
+  3. 当时间序列波动很大，长期趋势变化幅度较大，呈现明显且迅速的上升或下降趋
+     势时，宜选择较大的 值，如可在0.6～0.8间选值，以使预测模型灵敏度高些，能迅速跟上数据的变化；
+  4. 当时间序列数据是上升（或下降）的发展趋势类型， 应取较大值，在0.6~1之间。 
+  
+
+
